2015-07-08	ARM Thumb-32 support.  Reduced number of recursion levels
		from 6 to 5, so that compiler does not exhaust memory.

		include/biting-pear/kthxbai.h :
		- reduced recursion levels

		include/biting-pear/lolwut.h :
		- reduced recursion levels
		- added ARM Thumb-32 handling for lolwut(, 1) and (, 2)

		include/biting-pear/omg.h :
		- reduced recursion levels
		- ARM architecture: added ARM mode and Thumb mode handling

		lolwutconf/c++.inc :
		- now handles stuff like --host=armv7-a-linux-gnueabi
		- now tries to turn on Thumb mode when compiling for ARM

		lolwutconf/configure.inc :
		- more useful --help

		test/test-2.ccc :
		- added a few more printf(...) calls

2015-07-05	Somewhat better support for cross compilation in general.

		configure :
		- now checks for C++11 on build side

		lolwutconf/configure.inc :
		- added --host
		- added build environment sanity checks
		- now prefixes status messages with `* '
		- now uses POSIX character classes for `sed'

		lolwutconf/c++.inc :
		- now handles --host input, with special case for x86-32
		  compilation on x86-64
		- now checks for C++11 on build side

		include/biting-pear/omg.h :
		- fixed a minor bug

2015-07-04	Better x86-32 support.

		include/biting-pear/lolwut.h :
		- added handling of code pointers for x86-32

		include/biting-pear/omg.h :
		- added x86-32 control flows and junk syscalls

2015-07-03	Function pointers!

		include/biting-pear/lolwut.h :
		- added lolwut(, 2), for function pointers
		- lolwut(, 1):
		  - changed threshold for leaq -> leaq + addq/subq split
		    from 0x7fff0000 to 0x70000000
		  - for splits, took addq/subq out of __asm(...) so that g++
		    can move them around
		  - changed %c assembly operand modifier to %a

		include/biting-pear/kthxbai.h :
		- on C++11 compiler, now specially checks for function
		  pointer type and behaves differently in that case
		- code formatting tweaks

		README.md :
		- changed recommended way of assigning values from `var =