@@ -1,3 +1,12 @@
+2015-07-10	C++ compiler all the way.
+
+		GNUmakefile :
+		- now compiles helper/crc64 from helper/crc64.cc
+
+		helper/crc64.cc :
+		- renamed from helper/crc64.c; C++-ized
+		- changed read(...) call to fread(...)
+
 2015-07-08	ARM Thumb-32 support.  Reduced number of recursion levels
 		from 6 to 5, so that compiler does not exhaust memory.
 
